# alpha

./: LICENSE  LICENSE.ja
alpha/: Alpha.vcproj  LICENSE  StdAfx.h  about-dialog.hpp  code-pages-dialog.cpp  command.cpp  goto-line-dialog.hpp  mru-manager.hpp  new-file-format-dialog.cpp  print.cpp  search-dialog.hpp  temporary-macro.cpp  temporary-macro.hpp  test.vcproj
alpha/Resource/: Alpha.rc  code-page-name-table-en  messages.mc  messages.rc
alpha/ankh/: ankh.h  ankh.idl  startup-handler.cpp
alpha/src/: Msxml3.tlh  about-dialog.cpp  alpha.hpp  ambient-idl.hpp  ambient-iid.hpp  ambient.cpp  ambient.hpp  ambient.idl  application-gtk.cpp  application-win32.cpp  application.cpp  application.hpp  bookmark-dialog.cpp  bookmark-dialog.hpp  buffer-bar.cpp  buffer-bar.hpp  buffer-list.cpp  buffer-list.hpp  buffer.cpp  buffer.hpp  code-pages-dialog.cpp  code-pages-dialog.hpp  editor-pane.cpp  editor-pane.hpp  editor-panes.cpp  editor-panes.hpp  editor-view.cpp  editor-view.hpp  editor-window.cpp  editor-window.hpp  encodings-dialog.cpp  file-dialog.cpp  function-pointer.hpp  goto-line-dialog.cpp  input.cpp  input.hpp  intrinsic.cpp  intrinsic.hpp  localized-string.hpp  main-window.cpp  (+20 more)
alpha/src/ui/: encodings-dialog.cpp  execute-command-dialog.cpp  file-dialog.cpp  main-window-gtk.cpp  main-window-win32.cpp  main-window.hpp  menu.cpp  message-box.cpp  new-file-format-dialog.cpp  save-some-buffers-dialog.cpp  status-bar-gtk.cpp  status-bar-win32.cpp  status-bar.hpp
alpha/src/win32/: application.hpp  container.cpp  container.hpp  module.hpp  paned-widget.cpp  paned-widget.hpp  resource-id.hpp  stacked-widget.cpp  stacked-widget.hpp  status-bar.cpp  status-bar.hpp
ascension/: caret.hpp  common.hpp  config.hpp  content-assist.hpp  dfa.hpp  document.cpp  document.hpp  doxyfile  encoder.hpp  fileio.cpp  fileio.hpp  internal.hpp  layout.hpp  point.hpp  presentation.hpp  regex.hpp  rules.hpp  searcher.hpp  session.cpp  stream.hpp  text-editor.cpp  text-editor.hpp  unicode-property.hpp  unicode.hpp  ustring.hpp  viewer.hpp
ascension/ascension/: basic-types.hpp  caret.hpp  character-iterator.hpp  common.hpp  config.hpp  direction.hpp  directions.hpp  document.hpp  encoder.hpp  fileio.hpp  gap-vector.hpp  internal.hpp  layout.hpp  log.hpp  platforms.hpp  point.hpp  presentation.hpp  regex.hpp  rules.hpp  searcher.hpp  session.hpp  text-editor.hpp  type-list.hpp  unicode-property.hpp  unicode.hpp  ustring.hpp  viewer.hpp
ascension/ascension/content-assist/: content-assist.hpp  default-completion-proposal.hpp  default-content-assistant.hpp  identifiers-proposal-processor.hpp
ascension/ascension/corelib/: basic-exceptions.hpp  basic-types.hpp  character-iterator.hpp  combination.hpp  encoder.hpp  future.hpp  gap-vector.hpp  interprocess-data.hpp  listeners.hpp  memory.hpp  native-conversion.hpp  native-object.hpp  native-wrappers.hpp  numeric-range.hpp  range.hpp  regex.hpp  scope-guard.hpp  shared-library.hpp  signals.hpp  standard-iterator-adapter.hpp  string-piece.hpp  timer.hpp  type-list.hpp  type-traits.hpp  unicode-property.hpp  unicode-surrogates.hpp  unicode-utf.hpp  unicode.hpp  ustring.hpp  utility.hpp
ascension/ascension/graphics/: affine-transform.hpp  color.hpp  font-description.hpp  font-family.hpp  font-render-context.hpp  font.hpp  geometry.hpp  glyph-vector.hpp  graphics-windows.hpp  graphics.hpp  image.hpp  layout.hpp  length.hpp  line-layout-vector.hpp  native-conversion.hpp  object.hpp  paint-context.hpp  (+19 more)
ascension/encodings/: hebrew.cpp  irish.cpp  unicode.cpp  vietnamese.cpp
ascension/include/: caret.hpp  common.hpp  fileio.hpp  point.hpp  presentation.hpp  stream.hpp  viewer.hpp
ascension/manah/: memory.hpp  object.hpp
ascension/src/: caret.cpp  content-assist.cpp  dfa.cpp  document.cpp  encoder.cpp  fileio.cpp  layout.cpp  length.cpp  log.cpp  point.cpp  presentation.cpp  regex.cpp  rules.cpp  searcher.cpp  session.cpp  stream.cpp  text-editor.cpp  undo.cpp  unicode-property.cpp  uprops-decomposition-mapping-table  user-input.cpp  viewer.cpp  window-windows.hpp
ascension/test/: CMakeLists.txt  break-iterator-test.cpp  case-folder-test.cpp  document-test.cpp  gen-uax29-test.pl  geometry-test.cpp  normalizer-test.cpp  range-test.cpp  regex-test.cpp  string-test.cpp  unicode-iterator-test.cpp  utf-iterator-test.cpp  vc71.mak
ascension/test/obsolete/: vc71.mak
ascension/test/src/: bookmarker-test.cpp  character-test.cpp  direction-test.cpp  document-character-iterator-test.cpp  document-test.cpp  encoder-test.cpp  flow-relative-directional-test.cpp  from-latin1.hpp  gap-vector-test.cpp  geometry-test.cpp  kernel-point-test.cpp  line-relative-directional-test.cpp  locations-test.cpp  newline-test.cpp  numeric-range-test.cpp  physical-directional-test.cpp  position-region-test.cpp  regex-test.cpp  token-rules-test.cpp  unicode-string-sample.hpp  unicode-surrogates.hpp  utf-iterator-test.cpp  utf-test.cpp
ascension/tools/: check-ascii.py  dump-dbcs.py  dump-sbcs.py  gen-ivs-otft.py  gen-jis-table.py  gen-uprops.py  props.py  readme.txt
ascension/unicode/: break-iterator.cpp  collator.cpp  normalizer.cpp
ascension/xlib/: types.hpp
manah/: gap-buffer.hpp  memory.hpp  object.hpp
manah/com/: common.hpp  dispatch-impl.hpp  exception.hpp
manah/win32/: dc.hpp  gdi-object.hpp  module.hpp  windows.hpp
src/alpha/: Alpha.aps  Alpha.dsw  Alpha.rc  Alpha.sln  Alpha.vcproj  BufferList.h  LICENSE  StdAfx.cpp  about-dialog.cpp  about-dialog.hpp  ankh-idl.h  ankh-idl.idl  ankh-idl_i.c  ankh.cpp  ankh.hpp  application.cpp  application.hpp  bookmark-dialog.cpp  bookmark-dialog.hpp  buffer.cpp  buffer.hpp  code-pages-dialog.cpp  code-pages-dialog.hpp  command.cpp  command.hpp  execute-command-dialog.cpp  execute-command-dialog.hpp  goto-line-dialog.cpp  goto-line-dialog.hpp  keyboard-map.cpp  keyboard-map.hpp  mru-manager.cpp  mru-manager.hpp  new-file-format-dialog.cpp  new-file-format-dialog.hpp  print.cpp  print.hpp  resource.h  save-some-buffers-dialog.cpp  save-some-buffers-dialog.hpp  (+6 more)
src/manah/: gap-buffer.hpp  memory.hpp  object.hpp  small-object.hpp
(+692 files in other folders)
